fix lightgallery image styles and wrap post images with links

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -52,7 +52,7 @@
   box-sizing: border-box;
 }
 
-* {
+main * {
   max-width: var(--text-measure);
 }
 
@@ -89,7 +89,7 @@ body {
   }
 }
 
-body > * {
+body>* {
   width: 100%;
 }
 
@@ -118,7 +118,7 @@ main {
 }
 
 main :first-child,
-main > article :first-child {
+main>article :first-child {
   margin-top: 0;
 }
 
@@ -196,8 +196,9 @@ pre {
   flex: 1 0 17ch;
   max-width: unset;
 }
-.site-title > a[href],
-.site-title > a[href]:visited {
+
+.site-title>a[href],
+.site-title>a[href]:visited {
   color: var(--color-text);
 }
 
@@ -228,17 +229,17 @@ article {
   border-bottom: 1px solid var(--color-secondary);
 }
 
-article + article {
+article+article {
   margin-top: var(--s1);
 }
 
-main > section > article > * {
+main>section>article>* {
   margin-top: 0;
   margin-bottom: 0.5em;
 }
 
 main article picture,
-main article :not(picture) > img {
+main article :not(picture)>img {
   display: block;
   max-width: none;
   width: calc(100% + 3rem);
@@ -264,18 +265,18 @@ main article :not(picture) > img {
   }
 }
 
-.gallery > p {
+.gallery>p {
   padding: 0;
   margin: 0;
 }
 
 main article .gallery picture,
-main article .gallery :not(picture) > img {
+main article .gallery :not(picture)>img {
   position: static;
   width: auto;
 }
 
-article + nav {
+article+nav {
   margin-block-start: var(--s0);
 }
 
@@ -357,17 +358,19 @@ a[href].btn {
   display: none;
 }
 
-.stack-s3 > * + * {
+.stack-s3>*+* {
   margin-block-start: var(--s3);
 }
-.stack-s4 > * + * {
+
+.stack-s4>*+* {
   margin-block-start: var(--s4);
 }
-.stack-s5 > * + * {
+
+.stack-s5>*+* {
   margin-block-start: var(--s5);
 }
 
-[class^="stack"] > :is(h1, h2, h3, h4, h5, h6) + * {
+[class^="stack"]> :is(h1, h2, h3, h4, h5, h6)+* {
   margin-block-start: unset;
 }
 
@@ -410,7 +413,7 @@ a[href].btn {
     color: #262535;
   }
 
-  .banner > picture {
+  .banner>picture {
     position: absolute;
     max-width: unset;
     width: 100%;
@@ -419,7 +422,7 @@ a[href].btn {
     z-index: 0;
   }
 
-  .banner > picture img {
+  .banner>picture img {
     width: 100%;
     height: 100%;
     object-fit: cover;
